hphp/test/slow/implicit-context/newctx-2.php.expectf
Fatal error: This function requires a zoned context to be memoized using __Memoize(#KeyedByIC) or __MemoizeLSB(#KeyedByIC) in %s/hphp/test/slow/implicit-context/newctx-2.php on line 7
